--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-burger-menu": "^3.0.1",
     "react-dom": "^17.0.1",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-tabs": "^3.1.2",
